[gd_scene load_steps=14 format=3 uid="uid://c6a7g6p6nipw5"]

[ext_resource type="Script" path="res://battle/player/ZoomPreview.gd" id="1_r7o1p"]
[ext_resource type="Texture2D" uid="uid://blrmfntk4ogf0" path="res://library/passion/images/Animal.png" id="2_cel65"]
[ext_resource type="LabelSettings" uid="uid://dq5kctg5dkitl" path="res://styling/labels/AnimalLabel.tres" id="4_3qi1k"]
[ext_resource type="LabelSettings" uid="uid://nx6f46ywtswa" path="res://styling/labels/MagicLabel.tres" id="5_qrawx"]
[ext_resource type="LabelSettings" uid="uid://ihox33scd0t8" path="res://styling/labels/NatureLabel.tres" id="6_tgayk"]
[ext_resource type="LabelSettings" uid="uid://bpbd72h7s4e60" path="res://styling/labels/RobotLabel.tres" id="7_s3ajb"]

[sub_resource type="LabelSettings" id="LabelSettings_vf5mu"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ycx8i"]
bg_color = Color(0.741385, 0.741385, 0.741384, 1)

[sub_resource type="LabelSettings" id="LabelSettings_f6fok"]
font_size = 13

[sub_resource type="Theme" id="Theme_glu7d"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7nv8r"]
bg_color = Color(0.196078, 0.196078, 0.196078, 0.866667)

[sub_resource type="LabelSettings" id="LabelSettings_lv1if"]

[sub_resource type="LabelSettings" id="LabelSettings_4ysu6"]
font_size = 13

[node name="ZoomPreview" type="PanelContainer"]
custom_minimum_size = Vector2(200, 200)
anchors_preset = -1
anchor_right = 0.174
anchor_bottom = 0.309
offset_right = -0.448013
offset_bottom = -0.23201
script = ExtResource("1_r7o1p")

[node name="CardImage" type="TextureRect" parent="."]
visible = false
layout_mode = 2
texture = ExtResource("2_cel65")
expand_mode = 3

[node name="VBox" type="VBoxContainer" parent="."]
visible = false
custom_minimum_size = Vector2(150, 0)
layout_mode = 2

[node name="TopInfo" type="HBoxContainer" parent="VBox"]
custom_minimum_size = Vector2(150, 30)
layout_mode = 2

[node name="CardNameBG" type="Panel" parent="VBox/TopInfo"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2

[node name="CardName" type="Label" parent="VBox/TopInfo/CardNameBG"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Animal"
label_settings = SubResource("LabelSettings_vf5mu")

[node name="Costs" type="Panel" parent="VBox/TopInfo"]
custom_minimum_size = Vector2(30, 0)
layout_mode = 2
size_flags_horizontal = 10
theme_override_styles/panel = SubResource("StyleBoxFlat_ycx8i")

[node name="CostLabels" type="HBoxContainer" parent="VBox/TopInfo/Costs"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Passion" type="Label" parent="VBox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("4_3qi1k")

[node name="Imagination" type="Label" parent="VBox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("5_qrawx")

[node name="Growth" type="Label" parent="VBox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("6_tgayk")

[node name="Logic" type="Label" parent="VBox/TopInfo/Costs/CostLabels"]
layout_mode = 2
text = "1"
label_settings = ExtResource("7_s3ajb")

[node name="BotInfo" type="HBoxContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 10

[node name="Movement" type="Label" parent="VBox/BotInfo"]
layout_mode = 2
size_flags_vertical = 8
text = "1"
label_settings = SubResource("LabelSettings_f6fok")

[node name="CardText" type="Label" parent="VBox/BotInfo"]
clip_contents = true
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
theme = SubResource("Theme_glu7d")
theme_override_styles/normal = SubResource("StyleBoxFlat_7nv8r")
text = "\"Here you will find additional card rules\""
label_settings = SubResource("LabelSettings_lv1if")
autowrap_mode = 3
clip_text = true
text_overrun_behavior = 4

[node name="BattleStats" type="Label" parent="VBox/BotInfo"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 8
text = "1/1"
label_settings = SubResource("LabelSettings_4ysu6")
